--- a/MVC_MultitecUA/Views/Solicitud/Details.cshtml
+++ b/MVC_MultitecUA/Views/Solicitud/Details.cshtml
@@ -6,9 +6,26 @@
 
 <h2>Detalles de Solicitud</h2>
 
+
+
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Solicitudes", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
+
+
+@{
+    if (TempData["mal"] != null)
+    {
+        <p class="text-danger"><span class="glyphicon glyphicon-remove"></span> @TempData["mal"] </p>
+        TempData.Remove("mal");
+    }
+    else
+    if (TempData["bien"] != null)
+    {
+        <p class="text-success"><span class="glyphicon glyphicon-check"></span> @TempData["bien"] </p>
+        TempData.Remove("bien");
+    }
+}
 
 <div>
     <hr />
