Mergeado con Judith

--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -43,11 +43,10 @@
 									Eventos
 									<span class="caret"></span>
 								</a>
-								<ul class="dropdown-menu">
-									<li>@Html.ActionLink("Mis eventos", "", "")</li>
-									<li>@Html.ActionLink("Próximos eventos", "", "")</li>
-									<li>@Html.ActionLink("Galería de recuerdos", "", "")</li>
-								</ul>
+                                <ul class="dropdown-menu">
+                                    <li>@Html.ActionLink("Mis eventos", "", "")</li>
+                                    <li><a href="../Evento/TodosEventos">Todos los eventos</a></li>
+                                </ul>
 							</li>
                             <li>@Html.ActionLink("Servicios", "", "")</li>
                             <li><a href="http://multitecua.ml" target="_blank">Contacto / Acerca de</a></li>
