--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -27,27 +27,27 @@
                 <ul class="nav navbar-nav">
                     @{ if (Session["usuario"] == null || (Session["usuario"] != null && Session["modoAdmin"].ToString() == "false"))
                         {
-							<li class="dropdown">
-								<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-									Proyectos
-									<span class="caret"></span>
-								</a>
-								<ul class="dropdown-menu">
-									<li>@Html.ActionLink("Mis proyectos", "MisProyectos", "Proyecto")</li>
-									<li>@Html.ActionLink("Proyectos presentados", "ProyectosPresentados", "Proyecto")</li>
-									<li>@Html.ActionLink("Nuevo Proyecto", "Crear", "Proyecto")</li>
-								</ul>
-							</li>
-							<li class="dropdown">
-								<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-									Eventos
-									<span class="caret"></span>
-								</a>
+                            <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                    Proyectos
+                                    <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>@Html.ActionLink("Mis proyectos", "MisProyectos", "Proyecto")</li>
+                                    <li>@Html.ActionLink("Proyectos presentados", "ProyectosPresentados", "Proyecto")</li>
+                                    <li>@Html.ActionLink("Nuevo Proyecto", "Crear", "Proyecto")</li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                    Eventos
+                                    <span class="caret"></span>
+                                </a>
                                 <ul class="dropdown-menu">
                                     <li>@Html.ActionLink("Mis eventos", "", "")</li>
                                     <li><a href="../Evento/TodosEventos">Todos los eventos</a></li>
                                 </ul>
-							</li>
+                            </li>
                             <li>@Html.ActionLink("Servicios", "", "")</li>
                             <li><a href="http://multitecua.ml" target="_blank">Contacto / Acerca de</a></li>
                         }
@@ -55,52 +55,67 @@
                 </ul>
                 @{if (Session["usuario"] != null)
                     {
-                <ul class="nav navbar-nav navbar-right">
-                    @{if (Session["modoAdmin"].ToString() == "false")
-                        {
-                            <li>
-                                @Html.ActionLink("¡Hola " + Session["usuario"].ToString() + "!", "", "", null)
-                            </li>
-                        }
-                    }
-                    @{ if (Session["modoAdmin"].ToString() == "true")
-                        {
+                        <ul class="nav navbar-nav navbar-right">
+                            @{ if (Session["modoAdmin"].ToString() == "true")
+                                {
+
+                                    <li class="dropdown">
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                            Administrar
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li>@Html.ActionLink("Usuarios", "Index", "Usuario")</li>
+                                            <li>@Html.ActionLink("Mensajes", "Index", "Mensaje")</li>
+                                            <li>@Html.ActionLink("Categorías de Usuarios", "Index", "CategoriaUsuario")</li>
+                                            <li>@Html.ActionLink("Proyectos", "Index", "Proyecto")</li>
+                                            <li>@Html.ActionLink("Solicitudes", "Index", "Solicitud")</li>
+                                            <li>@Html.ActionLink("Categorías de Proyectos", "Index", "CategoriaProyecto")</li>
+                                            <li>@Html.ActionLink("Eventos", "Index", "Evento")</li>
+                                            <li>@Html.ActionLink("Recuerdos", "Index", "Recuerdo")</li>
+                                            <li>@Html.ActionLink("Noticias", "Index", "Noticia")</li>
+                                            <li>@Html.ActionLink("Servicios", "Index", "Servicio")</li>
+                                        </ul>
+                                    </li>
+                                }
+                            }
 
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                    Administrar
+                                    @Session["usuario"]
                                     <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Usuarios", "Index", "Usuario")</li>
-                                    <li>@Html.ActionLink("Mensajes", "Index", "Mensaje")</li>
-                                    <li>@Html.ActionLink("Categorías de Usuarios", "Index", "CategoriaUsuario")</li>
-                                    <li>@Html.ActionLink("Proyectos", "Index", "Proyecto")</li>
-                                    <li>@Html.ActionLink("Solicitudes", "Index", "Solicitud")</li>
-                                    <li>@Html.ActionLink("Categorías de Proyectos", "Index", "CategoriaProyecto")</li>
-                                    <li>@Html.ActionLink("Eventos", "Index", "Evento")</li>
-                                    <li>@Html.ActionLink("Recuerdos", "Index", "Recuerdo")</li>
-                                    <li>@Html.ActionLink("Noticias", "Index", "Noticia")</li>
-                                    <li>@Html.ActionLink("Servicios", "Index", "Servicio")</li>
-                                    <li class="divider"></li>
+                                    @{if (Session["modoAdmin"].ToString() == "false")
+                                        {
+                                            <li>
+                                                @Html.ActionLink("Modificar perfil", "Modificar", "Usuario")
+                                            </li>
+                                        }
+                                    }
+                                    @{ if (Session["esAdmin"].ToString() == "true")
+                                        {
+                                            if (Session["modoAdmin"].ToString() == "false")
+                                            {
+
+                                                <li>
+                                                    @Html.ActionLink("Entrar al modo Administrador", "Adminin", "Sesion")
+                                                </li>
+                                            }
+                                            else
+                                            {
+                                                <li>
+                                                    @Html.ActionLink("Salir del modo Administrador", "Adminout", "Sesion")
+                                                </li>
+                                            }
+                                        }
+                                    }
                                     <li>
-                                        @Html.ActionLink("Salir del modo Administrador", "Adminout", "Sesion")
+                                        @Html.ActionLink("Cerrar Sesión", "Logout", "Sesion")
                                     </li>
                                 </ul>
                             </li>
-                        }
-                    }
-                    @{ if (Session["esAdmin"].ToString() == "true" && Session["modoAdmin"].ToString() == "false")
-                        {
-                            <li>
-                                @Html.ActionLink("Entrar al modo Administrador", "Adminin", "Sesion")
-                            </li>
-                        }
-                    }
-                    <li>
-                        @Html.ActionLink("Cerrar Sesión", "Logout", "Sesion")
-                    </li>
-                </ul>
+                        </ul>
                     }
 
                 }
