Vista de usuario de proyecto provisionalmente terminado

--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Crear.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Crear.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>Crear Proyecto</h2>
-
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Todos los Proyectos", "ProyectosPresentados")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
