--- a/MVC_MultitecUA/Views/Evento/VistaUsuario/Detalles.cshtml
+++ b/MVC_MultitecUA/Views/Evento/VistaUsuario/Detalles.cshtml
@@ -79,7 +79,7 @@
 </div>
 
 <div class="form-inline">
-    @Html.ActionLink("Proyectos participantes", "", "", new { id = ViewData["idEvento"] }, new { @class = "btn btn-default" })
+    @Html.ActionLink("Proyectos participantes", "ProyectosPorEvento", "Proyecto", new { id = ViewData["idEvento"] }, new { @class = "btn btn-default" })
     @Html.ActionLink("Crear recuerdo", "Create", "Recuerdo", new { idEvento = ViewData["IdEvento"] }, new { @class = "btn btn-default" })
     <!-- Esto quiero cambiarlo a un partialView -->
     @Html.ActionLink("Ver Recuerdos", "porEvento", "Recuerdo", new { idEvento = ViewData["IdEvento"] }, new { @class = "btn btn-default" })
