--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Detalles.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Detalles.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>Detalles del Proyecto: @ViewData["titulo"]</h2>
-
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Todos los Proyectos", "ProyectosPresentados")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 <div>
     <hr />
     <dl class="dl-horizontal">
@@ -67,7 +69,7 @@
                 @{
                     foreach (var e in (System.Collections.IEnumerable)ViewData["listaParticipantes"])
                     {
-                <li>@Html.ActionLink(e.ToString(), "Detalles", "Usuario", new { nick = e }, null)</li>
+                        <li>@Html.ActionLink(e.ToString(), "Detalles", "Usuario", new { nick = e }, null)</li>
                     }
                 }
             </ul>
@@ -101,15 +103,72 @@
 
     </dl>
 
-</div>
+    @if (ViewData["esModerador"] != null)
+    {
+        <div class="dl-horizontal">
+            @using (Html.BeginForm("AgregarCatPro", "Proyecto"))
+            {
+                @Html.HiddenFor(model => model.Id)
+                <div class="form-horizontal form-group form-inline">
+                    <label>Agregar Categoría de Proyecto:</label>
+                    @Html.DropDownList("CategoriaPro", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasProyectoAgregar"]), new { @class = "form-control" })
+                    <input type="submit" value="Agregar" class="btn btn-default" />
+                </div>
+            }
+
+            @using (Html.BeginForm("EliminarCatPro", "Proyecto"))
+            {
+                @Html.HiddenFor(model => model.Id)
+                <div class="form-horizontal form-group form-inline">
+                    <label>Eliminar Categoría de Proyecto:</label>
+                    @Html.DropDownList("CategoriaPro", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasProyectoEliminar"]), new { @class = "form-control" })
+                    <input type="submit" value="Eliminar" class="btn btn-default" />
+                </div>
+            }
+        </div>
+
+        <div class="dl-horizontal">
+            @using (Html.BeginForm("AgregarCatUsu", "Proyecto"))
+            {
+                @Html.HiddenFor(model => model.Id)
+                <div class="form-horizontal form-group form-inline">
+                    <label>Agregar Categoría de Usuario:</label>
+                    @Html.DropDownList("CategoriaUsu", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasUsuarioAgregar"]), new { @class = "form-control" })
+                    <input type="submit" value="Agregar" class="btn btn-default" />
+                </div>
+            }
+
+            @using (Html.BeginForm("EliminarCatUsu", "Proyecto"))
+            {
+                @Html.HiddenFor(model => model.Id)
+                <div class="form-horizontal form-group form-inline">
+                    <label>Eliminar Categoría de Usuario:</label>
+                    @Html.DropDownList("CategoriaUsu", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasUsuarioEliminar"]), new { @class = "form-control" })
+                    <input type="submit" value="Eliminar" class="btn btn-default" />
+                </div>
+            }
+        </div>
+    }
+
+    </div>
 
 <div>
     @if (ViewData["esModerador"] != null)
     {
-        @Html.ActionLink("Administrar solicitudes", "", "Solicitud", new { id = Model.Id }, null)
+        <p>
+            @Html.ActionLink("Administrar solicitudes", "", "Solicitud", new { id = Model.Id }, null) |
+            @Html.ActionLink("Cambiar estado", "ChangeEstado", new { id = Model.Id }) |
+            @Html.ActionLink("Gestionar Eventos", "GestionEventos", new { id = Model.Id }) |
+            @Html.ActionLink("Gestionar Participantes", "GestionParticipantes", new { id = Model.Id }) |
+            @Html.ActionLink("Gestionar Moderadores", "GestionModeradores", new { id = Model.Id })
+        </p>
+        <p>
+            @Html.ActionLink("Modificar", "Edit", new { id = Model.Id }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id = Model.Id })
+        </p>
     }
     else if (ViewData["noParticpante"] != null)
     {
         @Html.ActionLink("Enviar solicitud", "", "Solicitud", new { id = Model.Id }, null)
     }
-</div>
+    </div>
