--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/MisProyectos.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/MisProyectos.cshtml
@@ -5,6 +5,9 @@
 }
 
 <h2>Proyectos en los que participas</h2>
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Todos los Proyectos", "ProyectosPresentados")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 <table class="table">
     <tr>
         <th>
@@ -16,21 +19,26 @@
         <th>
             @Html.DisplayNameFor(model => model.Estado)
         </th>
+        <th>
+            Eventos
+        </th>
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.ActionLink(item.Nombre, "Detalles", new { id = item.Id })
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
-            </td>
-            <th>
-                @Html.DisplayFor(model => item.Estado)
-            </th>
-        </tr>
+    <tr>
+        <td>
+            @Html.ActionLink(item.Nombre, "Detalles", new { id = item.Id })
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Descripcion)
+        </td>
+        <th>
+            @Html.DisplayFor(model => item.Estado)
+        </th>
+        <th>
+            @Html.ActionLink("Eventos", "porProyecto", "Evento", new { id = item.Id }, null)
+        </th>
+    </tr>
     }
-
 </table>
