--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>@Html.ActionLink("Mis proyectos", "MisProyectos", "Proyecto")</li>
-                                    <li>@Html.ActionLink("Proyectos presentados", "ProyectosPresentados", "Proyecto")</li>
+                                    <li>@Html.ActionLink("Listado de Proyectos", "ProyectosPresentados", "Proyecto")</li>
                                     <li>@Html.ActionLink("Nuevo Proyecto", "Crear", "Proyecto")</li>
                                 </ul>
                             </li>
